[workspace]
members = [
    "jellrust-cli",
    "jellrust-core",
    "jellrust-markdown",
    "jellrust-types",
    "jellrust-template",
    "jellrust-server",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Bliss Jaspis <blissl@jaspis.me>"]
license = "MIT"
repository = "https://github.com/blissjaspis/jellrust"

[workspace.dependencies]
# CLI and utilities
clap = { version = "4.5", features = ["derive", "cargo"] }
anyhow = "1.0"
thiserror = "1.0"

# File system and paths
walkdir = "2.5"
notify = "6.1"
glob = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Markdown parsing
pulldown-cmark = "0.11"
yaml-rust2 = "0.8"

# Template engines
tera = "1.20"
liquid = "0.26"

# Web server
axum = "0.7"
tokio = { version = "1.40", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["fs", "trace"] }

# Asset processing
grass = "0.13"  # SCSS compiler
syntect = "5.2"  # Syntax highlighting

# Utilities
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
once_cell = "1.19"
rayon = "1.10"  # Parallel processing

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
criterion = { version = "0.5", features = ["html_reports"] }

