[package]
name = "jellrust-markdown"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
pulldown-cmark.workspace = true
yaml-rust2.workspace = true
serde.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
syntect.workspace = true
once_cell.workspace = true

