[package]
name = "jellrust-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
jellrust-core = { path = "../jellrust-core" }
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
notify.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true

