[package]
name = "jellrust-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
jellrust-markdown = { path = "../jellrust-markdown" }
serde.workspace = true
serde_yaml.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true

